--- a/custom-scripts.html
+++ b/custom-scripts.html
@@ -1,7 +1,9 @@
 <script>
   // adjust web edition height or width of iframe for specific figure references, using tilde (~iframe)
 $(document).ready(function() {
-  $("#fig\\:sample-interactive-map~iframe").attr("height", "640px");
-  $("#fig\\:sample-interactive-map~iframe").attr("width", "100%");
+  $("#fig\\:sample-map~iframe").attr("height", "600px");
+  $("#fig\\:sample-map~iframe").attr("width", "100%");
+  $("#fig\\:excel-drag~iframe").attr("height", "450px");
+  $("#fig\\:excel-drag~iframe").attr("width", "50%");
 })
 </script>
